# c3pm_test_wierdmath

./: .gitignore  CMakeLists.txt  README.md  c3pm.json
src/: main.cpp
src/exports/: readme.txt  wierd_math.h
